Fixed project image spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -76,6 +76,7 @@ body {
 
   .project-image {
     width: 100%;
+    margin-top: 1em;
   }
 
   #enforcer-link {
